--- a/page1.html
+++ b/page1.html
@@ -4,9 +4,8 @@
 <title>Page One</title>
 </head>
 <body>
-
-<h1>Page 1</h1>
-<p>This is page one.</p>
+  
+<img src="Pizza.png">
 
 </body>
 </html>
