--- a/page2.html
+++ b/page2.html
@@ -7,6 +7,8 @@
 
 <h1>Page 2</h1>
 <p>This is page two.</p>
+  
+ <iframe width="560" height="315" src="https://www.youtube.com/embed/XyNlqQId-nk" frameborder="0" allowfullscreen></iframe>
 
 </body>
 </html>
